# rust_basic

./: output.txt
bevy_games/: Cargo.toml
bevy_games/src/: main.rs  systems.rs
bevy_games/src/game/: mod.rs  systems.rs
bevy_games/src/game/enemy/: mod.rs  resources.rs  systems.rs
bevy_games/src/game/player/: mod.rs  systems.rs
bevy_games/src/game/score/: mod.rs  resources.rs  systems.rs
bevy_games/src/game/star/: mod.rs  resources.rs  systems.rs
db/: Cargo.toml  db.sql
db/src/: main.rs
flappy/src/: main.rs
hello/src/: lib.rs  main.rs
leak/src/: main.rs  test.rs
lua_in_rust/src/: lex.rs  value.rs
minigrep/src/: lib.rs  main.rs
rc_pointer/src/: lib.rs  main.rs  test.rs
src/: lib.rs  main.rs
web/http/: Cargo.toml
web/http/src/: httpreponse.rs  httprequest.rs  lib.rs
web/httpserver/data/: orders.json
web/httpserver/public/: 404.html  health.html  index.html
web/httpserver/src/: handler.rs  router.rs  server.rs
ws/: .env
ws/webservice/: Cargo.toml
ws/webservice/src/: db_access.rs  errors.rs  handlers.rs  routers.rs  state.rs
