[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
# openssl = {version = "0.9.10", features = ["vendored"]}
serde = {version = "1.0.130", features = ["derive"]}
sqlx = {version = "0.7.1", features = [
    "postgres", 
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    ]}